--- a/machines.yaml
+++ b/machines.yaml
@@ -13,11 +13,47 @@ items:
         apiVersion: baremetalproviderspec/v1alpha1
         kind: BareMetalMachineProviderSpec
         private:
-          address: 10.61.0.14
+          address: 10.61.0.9
           port: 22
         public:
           address: 127.0.0.1
           port: 2222
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: master
+    name: master-1
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.10
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2223
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: master
+    name: master-2
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.11
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2224
 - apiVersion: cluster.k8s.io/v1alpha1
   kind: Machine
   metadata:
@@ -31,9 +67,117 @@ items:
         apiVersion: baremetalproviderspec/v1alpha1
         kind: BareMetalMachineProviderSpec
         private:
+          address: 10.61.0.12
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2225
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: worker
+    name: worker-1
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.13
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2226
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: worker
+    name: worker-2
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.14
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2227
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: worker
+    name: worker-3
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
           address: 10.61.0.15
           port: 22
         public:
           address: 127.0.0.1
-          port: 2223
+          port: 2228
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: worker
+    name: worker-4
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.16
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2229
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: worker
+    name: worker-5
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.17
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2230
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: worker
+    name: worker-6
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.18
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2231
 kind: List
