--- a/machines.yaml
+++ b/machines.yaml
@@ -13,11 +13,47 @@ items:
         apiVersion: baremetalproviderspec/v1alpha1
         kind: BareMetalMachineProviderSpec
         private:
-          address: 10.61.0.29
+          address: 10.61.0.33
           port: 22
         public:
           address: 127.0.0.1
           port: 2222
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: master
+    name: master-1
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.34
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2223
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: master
+    name: master-2
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.35
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2224
 - apiVersion: cluster.k8s.io/v1alpha1
   kind: Machine
   metadata:
@@ -31,11 +67,11 @@ items:
         apiVersion: baremetalproviderspec/v1alpha1
         kind: BareMetalMachineProviderSpec
         private:
-          address: 10.61.0.30
+          address: 10.61.0.36
           port: 22
         public:
           address: 127.0.0.1
-          port: 2223
+          port: 2225
 - apiVersion: cluster.k8s.io/v1alpha1
   kind: Machine
   metadata:
@@ -49,11 +85,11 @@ items:
         apiVersion: baremetalproviderspec/v1alpha1
         kind: BareMetalMachineProviderSpec
         private:
-          address: 10.61.0.31
+          address: 10.61.0.37
           port: 22
         public:
           address: 127.0.0.1
-          port: 2224
+          port: 2226
 - apiVersion: cluster.k8s.io/v1alpha1
   kind: Machine
   metadata:
@@ -67,9 +103,81 @@ items:
         apiVersion: baremetalproviderspec/v1alpha1
         kind: BareMetalMachineProviderSpec
         private:
-          address: 10.61.0.32
+          address: 10.61.0.38
           port: 22
         public:
           address: 127.0.0.1
-          port: 2225
+          port: 2227
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: worker
+    name: worker-3
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.39
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2228
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: worker
+    name: worker-4
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.40
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2229
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: worker
+    name: worker-5
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.41
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2230
+- apiVersion: cluster.k8s.io/v1alpha1
+  kind: Machine
+  metadata:
+    labels:
+      set: worker
+    name: worker-6
+    namespace: weavek8sops
+  spec:
+    providerSpec:
+      value:
+        apiVersion: baremetalproviderspec/v1alpha1
+        kind: BareMetalMachineProviderSpec
+        private:
+          address: 10.61.0.42
+          port: 22
+        public:
+          address: 127.0.0.1
+          port: 2231
 kind: List
